--- a/_pages/404.md
+++ b/_pages/404.md
@@ -8,5 +8,5 @@ Sorry, but the page you were trying to view does not exist.
 Something really went wrong!!!
 
 <p align="center">
-  <img src="/assets/images/spam-musubi.png" alt="spam-musubi"/>
+  <img src="/assets/images/spam-musubi.png" alt="spam-musubi" style="width: 70%;"/>
 </p>
